--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "primeicons": "^6.0.1",
     "primereact": "^10.5.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
