--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.2",
+    "mongodb": "^6.5.0",
     "next": "14.1.3",
     "primeicons": "^6.0.1",
     "primereact": "^10.5.1",
