--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@reduxjs/toolkit": "^2.2.2",
     "mongodb": "^6.5.0",
     "next": "14.1.3",
+    "next-auth": "^4.24.7",
     "primeicons": "^6.0.1",
     "primereact": "^10.5.1",
     "react": "^18",
