--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
+# MongoDB connection
 MONGODB_URI=mongodb://localhost:27017
+
+# Stripe connection
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=""
+STRIPE_SECRET_KEY=""
