--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "axios": "^1.6.8",
     "mongodb": "^6.5.0",
     "next": "14.1.3",
-    "next-auth": "^4.24.7",
+    "next-auth": "^5.0.0-beta.19",
     "primeicons": "^6.0.1",
     "primereact": "^10.6.3",
     "react": "^18",
